# synthesizerlog

./: Cargo.toml  README.md  Wavetable_synthesis.ipynb  csoundtest.csd  input.txt  q2.csd  sinusoid.ipynb
Assignment_1/: Cargo.toml  csoundtest.csd  output.txt  q2.csd  q4.csd  sinusoid.ipynb
Assignment_1/src/: main.rs
Assignment_2/: A2.ipynb  A2.py  Drum.py  piano.csd  q4.csd
Assignment_2/appig/: Cargo.toml
Assignment_2/appig/src/: main.rs
Assignment_3/: A3.ipynb  Cargo.toml  i.ipynb  setup.py
Assignment_4/: A4.py
src/: input.txt  main.rs  sinusoid.py
