[package]
name = "synthesizerlog"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.14.0"
rand = "0.8.0"
basic_waves = "0.1.1"
wav = "1.0.0"
hound = "3.5.0"
egui = "0.20.1"
eframe = "0.20.1"
midly = "0.5.3"